Add securityContext to dev k8s deployment.yaml
We do not currently configure the security context for our kubernetes
deployments. This exposes us to several security vulnerabilities, which
are being flagged by SAST tooling including Snyk's Infrastructure as
Code scanning.

This change sets three security configurations for the container:

capabilities:
  drop:
    - ALL
runAsNonRoot: true
allowPrivilegeEscalation: false

These ensure that the container runs:
* with restricted capabilities, so that the container is not running with
potentially unnecessary privileges;
* as non-root, so that the container is not running with full admin
privileges;
* with privilege escalation control, so that compromised process
cannot elevate privileges.

There is one further change that could be made (readOnlyRootFilesystem: true)
however this causes deployment failures and will be addressed in a later
change.

--- a/kubernetes_deploy/live/dev/deployment.yaml
+++ b/kubernetes_deploy/live/dev/deployment.yaml
@@ -50,3 +50,9 @@ spec:
               key: key
         - name: ENV
           value: dev
+        securityContext:
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
