--- a/kubernetes_deploy/live/production/deployment.yaml
+++ b/kubernetes_deploy/live/production/deployment.yaml
@@ -55,3 +55,9 @@ spec:
               key: key
         - name: ENV
           value: production
+        securityContext:
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
+          allowPrivilegeEscalation: false
